add docker file and statistic api (#5)
* add codecov

* add go badge

* add statistic api

* fix data race

* fix docker file and http register
