# gen/openapiv2/idl/pbecs/ecs.swagger.json
@@ -16,14 +16,14 @@
     "application/json"
   ],
   "paths": {
-    "/v1/demo": {
+    "/ecs/statistic": {
       "post": {
-        "operationId": "ECSService_Echo",
+        "operationId": "ECSService_ECSStatistic",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pbecsStringMessage"
+              "$ref": "#/definitions/pbecsECSStatisticResp"
             }
           },
           "default": {
@@ -39,7 +39,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/pbecsStringMessage"
+              "$ref": "#/definitions/pbecsECSStatisticReq"
             }
           }
         ],
@@ -50,13 +50,58 @@
     }
   },
   "definitions": {
-    "pbecsStringMessage": {
+    "ECSStatisticResplist": {
       "type": "object",
       "properties": {
-        "value": {
-          "type": "string"
+        "provider": {
+          "$ref": "#/definitions/pbtenantCloudProvider",
+          "title": "云提供商"
+        },
+        "regionId": {
+          "type": "integer",
+          "format": "int32",
+          "title": "区域Id，参考 tenant.proto 中的各个云的区域"
+        },
+        "count": {
+          "type": "string",
+          "format": "int64",
+          "title": "数量"
+        },
+        "regionName": {
+          "type": "string",
+          "title": "区域名称，方便可读，参考 tenant.proto 中的各个云的区域"
         }
       }
+    },
+    "pbecsECSStatisticReq": {
+      "type": "object",
+      "properties": {
+        "provider": {
+          "$ref": "#/definitions/pbtenantCloudProvider"
+        }
+      }
+    },
+    "pbecsECSStatisticResp": {
+      "type": "object",
+      "properties": {
+        "ecses": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ECSStatisticResplist"
+          }
+        }
+      }
+    },
+    "pbtenantCloudProvider": {
+      "type": "string",
+      "enum": [
+        "ali_cloud",
+        "tencent_cloud",
+        "huawei_cloud",
+        "aws_cloud",
+        "google_cloud"
+      ],
+      "default": "ali_cloud"
     },
     "protobufAny": {
       "type": "object",
